fix: use `!important` to hide hero portrait on smaller screens

--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -67,7 +67,7 @@
   }
 
   .portrait {
-    display: none;
+    display: none !important;
   }
 
   .text {
